src/objects/CAA_Picklist__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>External__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick if this pick list value is to show on external CAA</inlineHelpText>
        <label>External</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <inlineHelpText>This is the field tag in the code</inlineHelpText>
        <label>Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick if this pick list value is to show on internal CAA</inlineHelpText>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEuroCountry__c</fullName>
        <inlineHelpText>This is only to be used for the nationality pick list values for the EU validation</inlineHelpText>
        <label>IsEuroCountry</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsYPSA__c</fullName>
        <inlineHelpText>Type YES if this value is only applicable for a young person (if the question is asked). Type NO is this is only applicable for an adult. Leave blank if this should show for both an adult and a young person.</inlineHelpText>
        <label>IsYPSA</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>Decides the order in which the pick list value is shown on screen</inlineHelpText>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <inlineHelpText>How the pick list value displays on screen</inlineHelpText>
        <label>Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <inlineHelpText>The value which saves in the Salesforce record (e.g. account)</inlineHelpText>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CAA Picklists</label>
</CustomObject>